--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -73,12 +73,12 @@ turning your dreams into reality.</p>
 I’m  <span> Anamol Adhikari..</span> I am a webpage designer, and I'm very passionate and dedicated to my work. With lots of experience as a professional web designer, I have acquired the skills and knowledge necessary to make your project a success.</p>		
 			<div class="info2 text-left">
     			<strong>Name:</strong> Anamol Adhikari<br> 
-    			<br><strong>Age :</strong> 20 
+    			<br><strong>Age :</strong> 21 
             </div>
             
             <div class="info1 text-left">
-    			 <strong>Address : </strong>Nepal<br>
-                 <br><strong>Phone :</strong> +0123 123 456 789  
+    			 <strong>Address : </strong>Idaho<br>
+                 <br><strong>Phone :</strong> 208-970-9136  
             </div>
             
             <div class="btn btn-primary btn1">Download CV</div>
@@ -219,19 +219,19 @@ I’m  <span> Anamol Adhikari..</span> I am a webpage designer, and I'm very pas
                     	<i class="fas fa-compass icon1"></i>
                         	<h5>My Location:</h5>
 
-							<p >3481 Melrose Place, Beverly Hills CA</p>
+							<p >235 W 4th S, Rexburg Idaho</p>
                     </div>
                     <div class="col-md-4 heads">
                     	<i class="fas fa-mobile-alt icon2"></i>
                         	<h5>Phone Number:</h5>
 
-							<p >3481 Melrose Place, Beverly Hills CA</p>
+							<p >208-970-9136</p>
                     </div>
                     <div class="col-md-4 heads">
                     	<i class="far fa-envelope icon1"></i>
                         	<h5>Email Address:</h5>
 
-							<p >3481 Melrose Place, Beverly Hills CA</p>
+							<p >anamoladhikari1998@gmail.com</p>
                     </div>
                 </div>  
             </div>
