--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -225,7 +225,7 @@ I’m  <span> Anamol Adhikari..</span> I am a webpage designer, and I'm very pas
                     	<i class="fas fa-mobile-alt icon2"></i>
                         	<h5>Phone Number:</h5>
 
-							<p >208-970-9136</p>
+							<p style = "text-align:center">208-970-9136</p>
                     </div>
                     <div class="col-md-4 heads">
                     	<i class="far fa-envelope icon1"></i>
