Content and Images updated

--- a/Bridge/index.html
+++ b/Bridge/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <title>Bridge Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,9 +17,14 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href="#s1">Education</a>
+                <a href="s2">Wellness</a>
+                <a href="s3">spiritual</a>
+                <a href="s4">Home</a>
+                <a href="s5">Page 2</a>
+                <a href="s6">Site Plan</a>
+                <a href="s7">Contact Us</a>
+                
             </nav>
         </header>
 
@@ -37,36 +42,36 @@
             <p>Pillar of Welness.</p>
         </div>
         <div class="intro">
-            <section class="s">
+            <section id="s1">
                 <h5>sadasdas</h5>
                 sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
             </section>
-            <section class="s">
+            <section id="s2">
                 <h5>sadasdas</h5>
                 sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
             </section>
 
-            <section class="s">
+            <section id="s3">
                 <h5>sadasdas</h5>
                 sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
             </section>
-            <section class="s">
+            <section class="s4">
                 <h5>sadasdas</h5>
                 sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
             </section>
-            <section class="s">
+            <section class="s5">
                 <h5>sadasdas</h5>
                 sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
             </section>
-            <section class="s">
+            <section class="s6">
                 <h5>sadasdas</h5>
                 sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
             </section>
-            <section class="s">
+            <section class="s7">
                 <h5>sadasdas</h5>
                 sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
             </section>
-            <section class="s">
+            <section class="s8">
                 <h5>sadasdas</h5>
                 sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
             </section>
