--- a/personal site/site-plan.html
+++ b/personal site/site-plan.html
@@ -92,8 +92,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">GameSite</a>
+        <a href="#">MarketPlace</a>
       </nav>
       <hr>
       <h2>
@@ -104,10 +104,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [GameSite] <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          [MarketPlace]  <!-- change this -->
         </div>
 
         <div class="top">
@@ -129,29 +129,44 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        GameSite is the simple to-involve skin commercial center for CSGO things that permits you to trade CSGO skins for genuine cash. Along these lines, regardless assuming that you are searching for the best CSGO blade, an AK-47 Asimov, or even the incredible AWP Dragon Lore, you will track down all of this on the GameSite commercial center with huge number of skins and things to browse. Simply visit our CSGO market and begin searching for the skin of your fantasies.
+
+GameSite's costs are ordinarily up to 30% less expensive than on the Steam people group market, so you get a good deal on each buy. With a 0% purchasers expense you will pay precisely what you see, no secret charges, no awful astonishments. This makes GameSite the best spot to purchase skins.
+
+When you observed the thing, you like on GameSite, purchasing is helpful, modest and quick. All things you see on our site are in the Steam stock of our bots, fit to be sent straightforwardly to your Steam account.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/cs.jpeg" alt="image for homepage">
+        <img src="images/cs1.jpeg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>MarketPlace</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Not at all like the Steam people group market, GameSite permits you to safely sell skins for cash. All returns from the deals on the GameSite are immediately withdrawal. Steam wallet assets must be utilized on Steam and can't be removed. With a most extreme cost of $2000 per thing, Steam is likewise exceptionally ugly for selling uncommon and costly skins and some other costly weapon or blade skin. Moreover, Steam charges an enormous expense on each thing deal, so not exclusively is the cash stuck on your Steam account, yet you likewise lose a major lump of your cash! By selling on GameSite you get full adaptability on the most proficient method to involve your returns for anything that you like.
+
+Assuming you are purchasing skins, GameSite's instinctive plan permits you to observe the CSGO things you love substantially more without any problem. Our top to bottom channels permits you to search for uncommon stickers, float values, blur rates and considerably more. A few interesting things accessible on GameSite, similar to the M4A4 Howl or the AWP Dragon Lore, couldn't be purchased on the Steam market!
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/nightwish-AK.jpeg" alt="image for page">
+        <img src="images/print m4.jpeg" alt="image for page">
+        <img src="images/printstream.jpeg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Purchase</h3>
       <p>
-        [Written copy for the Page 3 here]
+        
+GameSite is straightforward and simple to trade skins you want! GameSite isn't simply a business opportunity for CSGO blades, there is likewise an extraordinary choice of more reasonable skins accessible. Find an enormous number of low-evaluated skins available to be purchased on the best site. Most things are essentially less expensive to purchase than on the Steam market, so GameSite permits you to get a good deal on each buy.
+
+Purchasing CSGO skins on GameSite is an issue free encounter. To purchase a skin, basically add it to your shopping basket. When you observed every one of the items you were searching for, you can continue to checkout and pay for your request. From that point onward, the skins are yours. No compelling reason to top-up your equilibrium first or trust that the dealer will convey. Our wide exhibit of installment choices guarantees that purchasing is pretty much as simple as some other web-based shopping.
+
+Dissimilar to other CSGO commercial centers, GameSite doesn't charge any secret expenses. The cost you see is the cost you pay. This 0% charge makes GameSite the best market to purchase. To make the entire cycle considerably more advantageous, GameSite naturally changes all costs over to your nearby cash. Regardless of where you are found, your new GameSite is only a couple of snaps away.
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/Screen Shot 2022-02-26 at 3.10.38 PM.png" alt="image for page3">
+        <img src="images/Screen Shot 2022-02-26 at 3.10.52 PM.png" alt="image for page3">
 
       </ul>
       <hr>
