--- a/Bridge/index.html
+++ b/Bridge/index.html
@@ -13,17 +13,14 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="bridge.png" alt="Bridge">
+                <img class="logo" src="imgs/bridge.png" alt="Bridge">
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#s1">Education</a>
-                <a href="s2">Wellness</a>
-                <a href="s3">spiritual</a>
-                <a href="s4">Home</a>
-                <a href="s5">Page 2</a>
-                <a href="s6">Site Plan</a>
-                <a href="s7">Contact Us</a>
+                <a href="#s1">Educational</a>
+                <a href="#s2">Physical</a>
+                <a href="#s3">Financial</a>
+                <a href="#s4">Spiritual</a>
                 
             </nav>
         </header>
@@ -31,59 +28,62 @@
         <main class="home-grid">
 
             <div id="background"></div>
-            <img class="mountains" src="meditate-c6cc67b354f67469fa34f77ca42fa2b241032bbf-s1100-c50.jpg" alt="Misty mountains">
+            <img class="mountains" src="imgs/meditate-c6cc67b354f67469fa34f77ca42fa2b241032bbf-s1100-c50.jpg" alt="Misty mountains">
             <section class="msg">
-                <h2>More Than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <h3>Bridge Initiative</h3>
+                <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent </p>
             </section>
         </main>
 
         <div class="pillar">
-            <p>Pillar of Welness.</p>
+            <h1>Pillars of Wellness</h1>
         </div>
         <div class="intro">
             <section id="s1">
-                <h5>sadasdas</h5>
-                sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
+                <h2>Educational</h2>
+                <p>ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent </p>
             </section>
             <section id="s2">
-                <h5>sadasdas</h5>
-                sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
+                <h2>Emotional</h2>
+                <p>ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent </p>
             </section>
 
             <section id="s3">
-                <h5>sadasdas</h5>
-                sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
+                <h2>Physical</h2>
+                <p>ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent </p> 
             </section>
-            <section class="s4">
-                <h5>sadasdas</h5>
-                sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
+            <section id="s4">
+                <h2>Social</h2>
+                <p>ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent </p> 
             </section>
-            <section class="s5">
-                <h5>sadasdas</h5>
-                sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
+            <section id="s5">
+                <h2>Financial</h2>
+                Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent 
             </section>
-            <section class="s6">
-                <h5>sadasdas</h5>
-                sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
+            <section id="s6">
+                <h2>Enviornmental</h2>
+                Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent 
             </section>
-            <section class="s7">
-                <h5>sadasdas</h5>
-                sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
+            <section id="s7">
+                <h2>Occupational</h2>
+                <p>ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent </p>
             </section>
-            <section class="s8">
-                <h5>sadasdas</h5>
-                sadbnvashndvashjmdgahjsdgahjsdghsjdhsghgh sahdgahjdghkasjdgahj dhjadgahjdghjasdghjg
+            <section id="s8">
+                <h2>Spiritual</h2>
+                <p>ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent </p>
             </section>
 
         </div>
 
         <div class="bg">
-            <img src="s.jpg" alt="milkyway" class="center">
+            <img src="imgs/eliott-reyna-jCEpN62oWL4-unsplash.jpg" alt="studants" class="center">
         </div>
 
         <div class="foot">
-
+            <nav>
+                <a href="site-plan-rafting.html">About Us</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
         </div>
     </div>
 </body>
