--- a/personal site/site-plan.html
+++ b/personal site/site-plan.html
@@ -180,20 +180,19 @@ Dissimilar to other CSGO commercial centers, GameSite doesn't charge any secret 
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Main.png" alt="home">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Market.png" alt="market">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
-    </main>
+      <img src="images/Purchase.png" alt="purchase">
   </body>
 
 </html>
