--- a/personal site/site-plan.html
+++ b/personal site/site-plan.html
@@ -178,19 +178,19 @@ Dissimilar to other CSGO commercial centers, GameSite doesn't charge any secret 
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Contents and subjects may likely to be changed.
       </p>
       <img src="images/Main.png" alt="home">
 
-      <h3>[Page 2]</h3>
+      <h3>Marketplace</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Contents and subjects may likely to be changed.
       </p>
       <img src="images/Market.png" alt="market">
 
-      <h3>[Page 3]</h3>
+      <h3>Cart/Purchase</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Contents and subjects may likely to be changed.
       </p>
       <img src="images/Purchase.png" alt="purchase">
   </body>
