--- a/wwr/index.html
+++ b/wwr/index.html
@@ -17,8 +17,8 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="blog.html" target="blank">Blog</a>
+                <a href="site-plan-rafting.html" target="blank">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
