not much of progress

--- a/personal site/index.html
+++ b/personal site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Navbar Animation</title>
+    <title>GameSite</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -24,10 +24,9 @@
               <div class="inner">
                 <h2 class="title">Game Site</h2>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Laudantium illum tenetur consequatur veritatis?
+                  GameSite is the simple to-involve skin commercial center for CSGO things that permits you to trade CSGO skins for genuine cash.
                 </p>
-                <button class="btn">Read more</button>
+                
               </div>
             </div>
           </header>
@@ -40,10 +39,13 @@
       <div class="links">
         <ul>
           <li>
-            <a href="index.html" style="--i: 0.05s;">Home</a>
+            <a href="index.html" style="--i: 0.05s;">Game Site</a>
           </li>
           <li>
-            <a href="#" style="--i: 0.1s;">Market</a>
+            <a href="home.html" style="--i: 0.02s;">Home</a>
+          </li>
+          <li>
+            <a href="#" style="--i: 0.02s;">Market</a>
           </li>
           <li>
             <a href="#" style="--i: 0.15s;">Purchase</a>
