--- a/personal site/index.html
+++ b/personal site/index.html
@@ -45,10 +45,10 @@
             <a href="home.html" style="--i: 0.02s;">Home</a>
           </li>
           <li>
-            <a href="#" style="--i: 0.02s;">Market</a>
+            <a href="market.html" style="--i: 0.02s;">Market</a>
           </li>
           <li>
-            <a href="#" style="--i: 0.15s;">Purchase</a>
+            <a href="Purchase.html" style="--i: 0.15s;">Purchase</a>
           </li>
           
           <li>
