--- a/personal site/market.html
+++ b/personal site/market.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navigation">
         <img class="logo" src="images/logo.png" alt="Game Site Logo">
-        <a class="active" href="#home">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <a href="#news">News</a>
