--- a/personal site/home.html
+++ b/personal site/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <a href="#contact">Contact</a>
         <a href="#news">News</a>
         <div class="right"> 
-            <input type="text" placeholder="Search..">
+            <input id="search" type="text" placeholder="Search..">
             <a href="#news">SignUp</a>
             <a href="#news">LogIn</a>
         </div>
