--- a/personal site/market.html
+++ b/personal site/market.html
@@ -11,7 +11,7 @@
     <div class="navigation">
         <img class="logo" src="images/logo.png" alt="Game Site Logo">
         <a class="active" href="index.html">Home</a>
-        <a href="#news">News</a>
+        <a href="#market.hmtl">News</a>
         <a href="#contact">Contact</a>
         <a href="#news">News</a>
         <div class="right"> 
