--- a/personal site/market.html
+++ b/personal site/market.html
@@ -124,6 +124,7 @@
            <a href = "#">PayPal</a>
            <a href = "#">Visa</a>
            <a href = "#">MasterCard</a>
+           <a href="site-plan.html">Site Plan</a>
         </div>
     </div>  
 </body>
