--- a/personal site/market.html
+++ b/personal site/market.html
@@ -32,7 +32,7 @@
                 <div class="grid-item">
                     <head>
                         <p class="user"> Dragon Lore</p>
-                        <img src="/images/deags.jpeg" alt="Dragon Lore">
+                        <img src="images/deags.jpeg" alt="Dragon Lore">
                         <a class = "menu" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         <h4>PRice - $$$$$$</h4>
                         <div class='button-box'>
@@ -44,7 +44,7 @@
               <div class="grid-item">
                 <head>
                     <p class="user"> Dragon Lore</p>
-                    <img src="/images/AK-47-Neon-Rider.png" alt="Dragon Lore">
+                    <img src="images/m4.webp" alt="Dragon Lore">
                     <a class = "menu" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                     <h4>PRice - $$$$$$</h4>
                     <div class='button-box'>
@@ -55,7 +55,7 @@
                 <div class="grid-item">
                     <head>
                         <p class="user"> Dragon Lore</p>
-                        <img src="/images/AK-47-Frontside-Misty.png" alt="Dragon Lore">
+                        <img src="images/AK-47-Neon-Rider.png" alt="Dragon Lore">
                         <a class = "menu" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         <h4>PRice - $$$$$$</h4>
                         <div class='button-box'>
@@ -75,7 +75,7 @@
                 <div class="grid-item">
                     <head>
                         <p class="user"> Dragon Lore</p>
-                        <img src="/images/m4.webp" alt="Dragon Lore">
+                        <img src="images/m4.webp" alt="Dragon Lore">
                         <a class = "menu" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         <h4>PRice - $$$$$$</h4>
                         <div class='button-box'>
@@ -87,7 +87,7 @@
               <div class="grid-item">
                 <head>
                     <p class="user"> Dragon Lore</p>
-                    <img src="/images/nightwish-AK.jpeg" alt="Dragon Lore">
+                    <img src="images/nightwish-AK.jpeg" alt="Dragon Lore">
                     <a class = "menu" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                     <h4>PRice - $$$$$$</h4>
                     <div class='button-box'>
@@ -98,7 +98,7 @@
                 <div class="grid-item">
                     <head>
                         <p class="user"> Dragon Lore</p>
-                        <img src="/images/butter.jpg" alt="Dragon Lore">
+                        <img src="images/butter.jpg" alt="Dragon Lore">
                         <a class = "menu" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         <h4>PRice - $$$$$$</h4>
                         <div class='button-box'>
