--- a/personal site/home/purchase.html
+++ b/personal site/home/purchase.html
@@ -18,9 +18,9 @@
 
     
   </head>
-  <body>
+  <body class="purchase-body">
       <header>
-        <div class="topnav" style="background-color: #f77f00">
+        <div class="topnav" style="background-color: #264653">
             <a class="active" href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
@@ -131,24 +131,25 @@
     <div class="container">
       <p style="font-size: 22px; font-weight: bolder; margin-bottom: -5px;">Cart <span class="price" style="color:black;"><i class="fa fa-shopping-cart"></i> <b>4</b></span></p>
       
-      <br><img src="/personal site/images/karam.jpg" style="width: 70px; height: 70px;"><span class="price" style="margin-top: -20px;"><br>$150</span></p>
-      <p><img src="/personal site//images/krieg.png" style="width: 70px; height: 70px;"><span class="price" style="margin-top: -20px;"><br>$150</span></p>
-      <p><img src="/personal site/images/nightwish-AK.jpeg" style="width: 70px; height: 70px;"><span class="price" style="margin-top: -20px;"><br>$150</span></p>
-      <p><img src="/personal site/images/butter.jpg" style="width: 70px; height: 70px;"><span class="price" style="margin-top: -20px;"><br>$15</span></p>
+      <br><img src="images/karam.jpg" style="width: 70px; height: 70px;"><span class="price" style="margin-top: -20px;"><br>$150</span></p>
+      <p><img src="images/krieg.png" style="width: 70px; height: 70px;"><span class="price" style="margin-top: -20px;"><br>$150</span></p>
+      <p><img src="images/nightwish-AK.jpeg" style="width: 70px; height: 70px;"><span class="price" style="margin-top: -20px;"><br>$150</span></p>
+      <p><img src="images/butter.jpg" style="width: 70px; height: 70px;"><span class="price" style="margin-top: -20px;"><br>$15</span></p>
       <hr>
       <p style="font-size: 22px; font-weight: bolder; margin-top: 15px;">Total <span class="price" style="color:black; margin-top: -5px;"><b>$600</b></span></p>
     </div>
   </div>
 </div>
 </div>
-<h2 class="market">Team</h2>
+
 
 <br>
 
 <div class="team-row">
-  <div class="team-column">
+  <h2 class="market">Team</h2>
+  <div class="team-column" style="background: #F1FAEE;">
     <div class="team-card">
-      <img src="/personal site/images/PP.jpeg" alt="Jane" style="width:405px; padding-left:120px;">
+      <img src="images/PP.jpeg" alt="Jane" style="width:405px; padding-left:120px;">
       <div class="team-container">
         <h2>Anamol Adhikari</h2>
         <p class="team-title">Web Developer and Student</p>
@@ -159,9 +160,9 @@
     </div>
   </div>
 
-  <div class="team-column">
+  <div class="team-column" style="background: #F1FAEE;">
     <div class="team-card">
-      <img src="/personal site/images/hayesa.jpeg" alt="Mike" style="width:400px; padding-left:200px;" >
+      <img src="images/hayesa.jpeg" alt="Mike" style="width:400px; padding-left:200px;" >
       <div class="team-container">
         <h2>Adam Hayes</h2>
         <p class="team-title">Profressor</p>
@@ -172,9 +173,9 @@
     </div>
   </div>
   
-  <div class="team-column">
+  <div class="team-column" style="background: #F1FAEE;">
     <div class="team-card">
-      <img src="/personal site/images/kevin.jpeg" alt="John" style="width:433px; padding-left: 150px;">
+      <img src="images/kevin.jpeg" alt="John" style="width:433px; padding-left: 150px;">
       <div class="team-container">
         <h2>Kevin Castro Chávez</h2>
         <p class="team-title">Teacher Assistant</p>
@@ -185,10 +186,10 @@
     </div>
 </div>
 </div>
- <footer style="margin-top: 0px; background-color: #F77F00;"> 
+ <footer style="margin-top: 0px; background-color: #264653;"> 
         <h3>GAMESTIE &copy; 2022 - Anamol Adhikari</h3>
-        <h3><a href="#siteplan" style="color: black;">Site Plan</a></h3>
-        <h3><a href="#contact"style="color: black;">Contact Us</a></h3>
+        <h3><a href="#siteplan" style="color: white;">Site Plan</a></h3>
+        <h3><a href="#contact"style="color: white;">Contact Us</a></h3>
         <div class="social">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
