--- a/personal site/home/purchase.html
+++ b/personal site/home/purchase.html
@@ -21,7 +21,7 @@
   <body class="purchase-body">
       <header>
         <div class="topnav" style="background-color: #264653">
-            <a class="active" href="#home">Home</a>
+            <a class="active" href="./purchase.html">Home</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
             <div class="login-container">
@@ -188,7 +188,7 @@
 </div>
  <footer style="margin-top: 0px; background-color: #264653;"> 
         <h3>GAMESTIE &copy; 2022 - Anamol Adhikari</h3>
-        <h3><a href="#siteplan" style="color: white;">Site Plan</a></h3>
+        <h3><a href="site-plan.html" style="color: white;">Site Plan</a></h3>
         <h3><a href="#contact"style="color: white;">Contact Us</a></h3>
         <div class="social">
             <a href="#" class="fa fa-facebook"></a>
