--- a/personal site/home/purchase.html
+++ b/personal site/home/purchase.html
@@ -187,7 +187,7 @@
 </div>
 </div>
  <footer style="margin-top: 0px; background-color: #264653;"> 
-        <h3>GAMESTIE &copy; 2022 - Anamol Adhikari</h3>
+        <h3 style="color: white;">GAMESTIE &copy; 2022 - Anamol Adhikari</h3>
         <h3><a href="site-plan.html" style="color: white;">Site Plan</a></h3>
         <h3><a href="#contact"style="color: white;">Contact Us</a></h3>
         <div class="social">
